multi-region support
All changes are auto-generated.
