# python/mzcloud/api/cloud_providers/cloud_providers_retrieve.py
@@ -3,42 +3,36 @@ from typing import Any, Dict, List, Optional, Union, cast
 import httpx
 
 from ...client import AuthenticatedClient, Client
-from ...models.deployment import Deployment
-from ...models.patched_deployment_update_request import PatchedDeploymentUpdateRequest
+from ...models.supported_cloud_region import SupportedCloudRegion
 from ...types import UNSET, Response
 
 
 def _get_kwargs(
     *,
     client: AuthenticatedClient,
-    id: str,
-    json_body: PatchedDeploymentUpdateRequest,
 ) -> Dict[str, Any]:
-    url = "{}/api/deployments/{id}".format(client.base_url, id=id)
+    url = "{}/api/cloud-providers".format(client.base_url)
 
     headers: Dict[str, Any] = client.get_headers()
     cookies: Dict[str, Any] = client.get_cookies()
-
-    json_json_body = json_body.to_dict()
 
     return {
         "url": url,
         "headers": headers,
         "cookies": cookies,
         "timeout": client.get_timeout(),
-        "json": json_json_body,
     }
 
 
-def _parse_response(*, response: httpx.Response) -> Optional[Deployment]:
+def _parse_response(*, response: httpx.Response) -> Optional[SupportedCloudRegion]:
     if response.status_code == 200:
-        response_200 = Deployment.from_dict(response.json())
+        response_200 = SupportedCloudRegion.from_dict(response.json())
 
         return response_200
     return None
 
 
-def _build_response(*, response: httpx.Response) -> Response[Deployment]:
+def _build_response(*, response: httpx.Response) -> Response[SupportedCloudRegion]:
     return Response(
         status_code=response.status_code,
         content=response.content,
@@ -50,16 +44,12 @@ def _build_response(*, response: httpx.Response) -> Response[Deployment]:
 def sync_detailed(
     *,
     client: AuthenticatedClient,
-    id: str,
-    json_body: PatchedDeploymentUpdateRequest,
-) -> Response[Deployment]:
+) -> Response[SupportedCloudRegion]:
     kwargs = _get_kwargs(
         client=client,
-        id=id,
-        json_body=json_body,
     )
 
-    response = httpx.patch(
+    response = httpx.get(
         **kwargs,
     )
 
@@ -69,32 +59,24 @@ def sync_detailed(
 def sync(
     *,
     client: AuthenticatedClient,
-    id: str,
-    json_body: PatchedDeploymentUpdateRequest,
-) -> Optional[Deployment]:
-    """Partially update a deployment."""
+) -> Optional[SupportedCloudRegion]:
+    """List the cloud provider and regions"""
 
     return sync_detailed(
         client=client,
-        id=id,
-        json_body=json_body,
     ).parsed
 
 
 async def asyncio_detailed(
     *,
     client: AuthenticatedClient,
-    id: str,
-    json_body: PatchedDeploymentUpdateRequest,
-) -> Response[Deployment]:
+) -> Response[SupportedCloudRegion]:
     kwargs = _get_kwargs(
         client=client,
-        id=id,
-        json_body=json_body,
     )
 
     async with httpx.AsyncClient() as _client:
-        response = await _client.patch(**kwargs)
+        response = await _client.get(**kwargs)
 
     return _build_response(response=response)
 
@@ -102,15 +84,11 @@ async def asyncio_detailed(
 async def asyncio(
     *,
     client: AuthenticatedClient,
-    id: str,
-    json_body: PatchedDeploymentUpdateRequest,
-) -> Optional[Deployment]:
-    """Partially update a deployment."""
+) -> Optional[SupportedCloudRegion]:
+    """List the cloud provider and regions"""
 
     return (
         await asyncio_detailed(
             client=client,
-            id=id,
-            json_body=json_body,
         )
     ).parsed
