# python/mzcloud/api/regions/regions_retrieve.py
@@ -3,42 +3,37 @@ from typing import Any, Dict, List, Optional, Union, cast
 import httpx
 
 from ...client import AuthenticatedClient, Client
-from ...models.deployment import Deployment
-from ...models.deployment_request import DeploymentRequest
+from ...models.supported_cloud_region import SupportedCloudRegion
 from ...types import UNSET, Response
 
 
 def _get_kwargs(
     *,
     client: AuthenticatedClient,
-    id: str,
-    json_body: DeploymentRequest,
+    provider_name: str,
 ) -> Dict[str, Any]:
-    url = "{}/api/deployments/{id}".format(client.base_url, id=id)
+    url = "{}/api/regions/{providerName}".format(client.base_url, providerName=provider_name)
 
     headers: Dict[str, Any] = client.get_headers()
     cookies: Dict[str, Any] = client.get_cookies()
-
-    json_json_body = json_body.to_dict()
 
     return {
         "url": url,
         "headers": headers,
         "cookies": cookies,
         "timeout": client.get_timeout(),
-        "json": json_json_body,
     }
 
 
-def _parse_response(*, response: httpx.Response) -> Optional[Deployment]:
+def _parse_response(*, response: httpx.Response) -> Optional[SupportedCloudRegion]:
     if response.status_code == 200:
-        response_200 = Deployment.from_dict(response.json())
+        response_200 = SupportedCloudRegion.from_dict(response.json())
 
         return response_200
     return None
 
 
-def _build_response(*, response: httpx.Response) -> Response[Deployment]:
+def _build_response(*, response: httpx.Response) -> Response[SupportedCloudRegion]:
     return Response(
         status_code=response.status_code,
         content=response.content,
@@ -50,16 +45,14 @@ def _build_response(*, response: httpx.Response) -> Response[Deployment]:
 def sync_detailed(
     *,
     client: AuthenticatedClient,
-    id: str,
-    json_body: DeploymentRequest,
-) -> Response[Deployment]:
+    provider_name: str,
+) -> Response[SupportedCloudRegion]:
     kwargs = _get_kwargs(
         client=client,
-        id=id,
-        json_body=json_body,
+        provider_name=provider_name,
     )
 
-    response = httpx.put(
+    response = httpx.get(
         **kwargs,
     )
 
@@ -69,32 +62,28 @@ def sync_detailed(
 def sync(
     *,
     client: AuthenticatedClient,
-    id: str,
-    json_body: DeploymentRequest,
-) -> Optional[Deployment]:
-    """Update a deployment."""
+    provider_name: str,
+) -> Optional[SupportedCloudRegion]:
+    """ """
 
     return sync_detailed(
         client=client,
-        id=id,
-        json_body=json_body,
+        provider_name=provider_name,
     ).parsed
 
 
 async def asyncio_detailed(
     *,
     client: AuthenticatedClient,
-    id: str,
-    json_body: DeploymentRequest,
-) -> Response[Deployment]:
+    provider_name: str,
+) -> Response[SupportedCloudRegion]:
     kwargs = _get_kwargs(
         client=client,
-        id=id,
-        json_body=json_body,
+        provider_name=provider_name,
     )
 
     async with httpx.AsyncClient() as _client:
-        response = await _client.put(**kwargs)
+        response = await _client.get(**kwargs)
 
     return _build_response(response=response)
 
@@ -102,15 +91,13 @@ async def asyncio_detailed(
 async def asyncio(
     *,
     client: AuthenticatedClient,
-    id: str,
-    json_body: DeploymentRequest,
-) -> Optional[Deployment]:
-    """Update a deployment."""
+    provider_name: str,
+) -> Optional[SupportedCloudRegion]:
+    """ """
 
     return (
         await asyncio_detailed(
             client=client,
-            id=id,
-            json_body=json_body,
+            provider_name=provider_name,
         )
     ).parsed
