# python/mzcloud/models/__init__.py
@@ -5,8 +5,11 @@ from .deployment_request import DeploymentRequest
 from .deployment_size_enum import DeploymentSizeEnum
 from .onboarding_call import OnboardingCall
 from .organization import Organization
-from .patched_deployment_request import PatchedDeploymentRequest
+from .patched_deployment_update_request import PatchedDeploymentUpdateRequest
 from .pending_migration import PendingMigration
 from .pending_migration_request import PendingMigrationRequest
+from .provider_enum import ProviderEnum
 from .schema_retrieve_format import SchemaRetrieveFormat
 from .schema_retrieve_response_200 import SchemaRetrieveResponse200
+from .supported_cloud_region import SupportedCloudRegion
+from .supported_cloud_region_request import SupportedCloudRegionRequest
