# rust/src/apis/cloud_providers_api.rs
@@ -1,0 +1,59 @@
+/*
+ * Materialize Cloud
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.0
+ *
+ * Generated by: https://openapi-generator.tech
+ */
+
+use reqwest;
+
+use super::{configuration, Error};
+use crate::apis::ResponseContent;
+
+/// struct for typed errors of method `cloud_providers_retrieve`
+#[derive(Debug, Clone, Serialize, Deserialize)]
+#[serde(untagged)]
+pub enum CloudProvidersRetrieveError {
+    UnknownValue(serde_json::Value),
+}
+
+/// List the cloud provider and regions
+pub async fn cloud_providers_retrieve(
+    configuration: &configuration::Configuration,
+) -> Result<crate::models::SupportedCloudRegion, Error<CloudProvidersRetrieveError>> {
+    let local_var_client = &configuration.client;
+
+    let local_var_uri_str = format!("{}/api/cloud-providers", configuration.base_path);
+    let mut local_var_req_builder =
+        local_var_client.request(reqwest::Method::GET, local_var_uri_str.as_str());
+
+    if let Some(ref local_var_user_agent) = configuration.user_agent {
+        local_var_req_builder =
+            local_var_req_builder.header(reqwest::header::USER_AGENT, local_var_user_agent.clone());
+    }
+    if let Some(ref local_var_token) = configuration.bearer_access_token {
+        local_var_req_builder = local_var_req_builder.bearer_auth(local_var_token.to_owned());
+    };
+
+    let local_var_req = local_var_req_builder.build()?;
+    let local_var_resp = local_var_client.execute(local_var_req).await?;
+
+    let local_var_status = local_var_resp.status();
+    let local_var_content = local_var_resp.text().await?;
+
+    if !local_var_status.is_client_error() && !local_var_status.is_server_error() {
+        serde_json::from_str(&local_var_content).map_err(Error::from)
+    } else {
+        let local_var_entity: Option<CloudProvidersRetrieveError> =
+            serde_json::from_str(&local_var_content).ok();
+        let local_var_error = ResponseContent {
+            status: local_var_status,
+            content: local_var_content,
+            entity: local_var_entity,
+        };
+        Err(Error::ResponseError(local_var_error))
+    }
+}
