# rust/src/models/mod.rs
@@ -8,9 +8,15 @@ pub mod onboarding_call;
 pub use self::onboarding_call::OnboardingCall;
 pub mod organization;
 pub use self::organization::Organization;
-pub mod patched_deployment_request;
-pub use self::patched_deployment_request::PatchedDeploymentRequest;
+pub mod patched_deployment_update_request;
+pub use self::patched_deployment_update_request::PatchedDeploymentUpdateRequest;
 pub mod pending_migration;
 pub use self::pending_migration::PendingMigration;
 pub mod pending_migration_request;
 pub use self::pending_migration_request::PendingMigrationRequest;
+pub mod provider_enum;
+pub use self::provider_enum::ProviderEnum;
+pub mod supported_cloud_region;
+pub use self::supported_cloud_region::SupportedCloudRegion;
+pub mod supported_cloud_region_request;
+pub use self::supported_cloud_region_request::SupportedCloudRegionRequest;
